--- a/templates/base.html
+++ b/templates/base.html
@@ -24,14 +24,62 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('overview') }}">
+                            <i class="bi bi-calendar3 me-1"></i>Overview
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('income') }}">
+                            <i class="bi bi-cash-stack me-1"></i>Income
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('bills') }}">
                             <i class="bi bi-receipt me-1"></i>Bills
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('subscriptions') }}">
+                            <i class="bi bi-arrow-repeat me-1"></i>Subscriptions
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('loans') }}">
+                            <i class="bi bi-bank me-1"></i>Loans
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('credit_cards') }}">
                             <i class="bi bi-credit-card me-1"></i>Credit Cards
                         </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="backupDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-cloud-arrow-down me-1"></i>Backup
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="backupDropdown">
+                            <li>
+                                <a class="dropdown-item" href="{{ url_for('export_backup') }}">
+                                    <i class="bi bi-download me-2"></i>Export Data (JSON)
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="{{ url_for('import_backup') }}">
+                                    <i class="bi bi-upload me-2"></i>Import Data
+                                </a>
+                            </li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <a class="dropdown-item" href="{{ url_for('manual_backup') }}">
+                                    <i class="bi bi-hdd me-2"></i>Create DB Backup
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="{{ url_for('manage_backups') }}">
+                                    <i class="bi bi-folder me-2"></i>Manage Backups
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('logout') }}">
