--- a/templates/import_backup.html
+++ b/templates/import_backup.html
@@ -18,7 +18,7 @@
                     <div class="mb-3">
                         <label for="backup_file" class="form-label">Select Backup File</label>
                         <input type="file" class="form-control" id="backup_file" name="backup_file" accept=".json" required>
-                        <div class="form-text">Select a JSON backup file previously exported from Vance Financial.</div>
+                        <div class="form-text">Select a JSON backup file previously exported from Vance Finance.</div>
                     </div>
                     
                     <div class="mb-3">
