--- a/templates/income.html
+++ b/templates/income.html
@@ -8,7 +8,10 @@
     </button>
 </div>
 
-<!-- Income Sources Table -->
+<!-- Income Sources Table 
+
+
+
 <div class="card mb-4">
     <div class="card-header">
         <h5 class="mb-0">Your Income Sources</h5>
