--- a/templates/subscriptions.html
+++ b/templates/subscriptions.html
@@ -8,7 +8,9 @@
     </button>
 </div>
 
-<!-- Subscriptions Table -->
+<!-- Subscriptions Table 
+
+
 <div class="card mb-4">
     <div class="card-header d-flex justify-content-between align-items-center">
         <span>Your Subscriptions</span>
