--- a/templates/loans.html
+++ b/templates/loans.html
@@ -8,7 +8,9 @@
     </button>
 </div>
 
-<!-- Loans Table -->
+<!-- Loans Table 
+
+
 <div class="card mb-4">
     <div class="card-header d-flex justify-content-between align-items-center">
         <span>Your Loans</span>
