--- a/templates/base.html
+++ b/templates/base.html
@@ -242,7 +242,7 @@
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('login') }}">
+                        <a class="nav-link" href="{{ url_for('demo_page') }}">
                             <i class="bi bi-play-circle me-1"></i>Demo
                         </a>
                     </li>
