--- a/templates/bills.html
+++ b/templates/bills.html
@@ -251,6 +251,17 @@
                                 </label>
                             </div>
                         </div>
+                        <div class="col-12">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="include_in_calculations" name="include_in_calculations" checked>
+                                <label class="form-check-label" for="include_in_calculations">
+                                    Include in budget and overview calculations
+                                </label>
+                                <small class="form-text text-muted">
+                                    Uncheck to exclude this bill from automatic calculations in budgets and financial overviews
+                                </small>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -472,21 +483,22 @@ function populateEditLoanModal(id, name, loanType, principal, balance, payment, 
     document.getElementById('editLoanForm').action = '/edit/loan/' + id;
 }
 
-function deleteBill(id, name) {
-    if (confirm('Are you sure you want to delete the bill "' + name + '"? This action cannot be undone.')) {
-        window.location.href = '/delete/bill/' + id;
+    function deleteBill(id, name) {
+        if (confirm('Are you sure you want to delete the bill "' + name + '"? This action cannot be undone.')) {
+            window.location.href = '/delete/bill/' + id;
+        }
     }
-}
 
-function deleteSubscription(id, name) {
-    if (confirm('Are you sure you want to delete the subscription "' + name + '"? This action cannot be undone.')) {
-        window.location.href = '/delete/subscription/' + id;
+    function deleteSubscription(id, name) {
+        if (confirm('Are you sure you want to delete the subscription "' + name + '"? This action cannot be undone.')) {
+            window.location.href = '/delete/subscription/' + id;
+        }
     }
-}
 
-function deleteLoan(id, name) {
-    if (confirm('Are you sure you want to delete the loan "' + name + '"? This action cannot be undone.')) {
-        window.location.href = '/delete/loan/' + id;
+    function deleteLoan(id, name) {
+        if (confirm('Are you sure you want to delete the loan "' + name + '"? This action cannot be undone.')) {
+            window.location.href = '/delete/loan/' + id;
+        }
     }
 }</script>
 {% endblock %}
