--- a/templates/budget_goals.html
+++ b/templates/budget_goals.html
@@ -147,6 +147,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <form method="POST">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>  <!-- ADD THIS LINE -->
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-md-8">
@@ -232,6 +233,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <form id="contributionForm">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>  <!-- ADD THIS LINE -->
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="contribution_amount" class="form-label">Contribution Amount *</label>
