--- a/templates/bills.html
+++ b/templates/bills.html
@@ -217,6 +217,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form method="POST" action="{{ url_for('bills') }}">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>  <!-- ADD THIS LINE -->
                 <div class="modal-body">
                     <div class="row g-3">
                         <div class="col-12">
@@ -282,6 +283,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form method="POST" id="editBillForm">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>  <!-- ADD THIS LINE -->
                 <div class="modal-body">
                     <div class="row g-3">
                         <div class="col-12">
@@ -336,6 +338,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form method="POST" id="editSubscriptionForm">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>  <!-- ADD THIS LINE -->
                 <div class="modal-body">
                     <div class="row g-3">
                         <div class="col-12">
@@ -401,6 +404,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form method="POST" id="editLoanForm">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>  <!-- ADD THIS LINE -->
                 <div class="modal-body">
                     <div class="row g-3">
                         <div class="col-12">
