--- a/templates/budget_transactions.html
+++ b/templates/budget_transactions.html
@@ -125,8 +125,9 @@
                 <h5 class="modal-title">Add Transaction</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
-            <form method="POST">
-                <div class="modal-body">
+<form method="POST">
+    <input type="hidden" name="csrf_token" value="<input type="hidden" name="csrf_token" value="<input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>"/>"/>  <!-- ADD THIS LINE -->
+    <div class="modal-body">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="mb-3">
