--- a/templates/subscriptions.html
+++ b/templates/subscriptions.html
@@ -98,7 +98,8 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form method="POST" action="{{ url_for('subscriptions') }}">
-                <div class="modal-body">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>  <!-- ADD THIS LINE -->
+                <div class="modal-body"
                     <div class="row g-3">
                         <div class="col-12">
                             <label for="name" class="form-label">Service Name</label>
@@ -163,6 +164,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form method="POST" id="editSubscriptionForm">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>  <!-- ADD THIS LINE -->
                 <div class="modal-body">
                     <div class="row g-3">
                         <div class="col-12">
